changes fonts and main page

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Homepage of Ugur Tigu" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
       rel="stylesheet"
     />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>ugurtigu | com</title>
